<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borda_results_2"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_results"
                    android:backgroundTint="@color/mega"
                    android:padding="10dp"
                    android:text="@string/megasena"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/numero_do_concurso"
                        android:textSize="20sp" />

                <TextView
                        android:id="@+id/tv_num_concurso"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="0000" />
            </LinearLayout>

            <TextView
                    android:id="@+id/tv_cidade_concurso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="20sp"
                    tools:text="São Paulo - SP" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">

                <TextView
                        android:id="@+id/tv_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@drawable/borda_results_2"
                        android:backgroundTint="@color/mega"
                        android:padding="3dp"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        tools:text="01" />

                <TextView
                        android:id="@+id/tv_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@drawable/borda_results_2"
                        android:backgroundTint="@color/mega"
                        android:padding="3dp"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        tools:text="01" />

                <TextView
                        android:id="@+id/tv_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@drawable/borda_results_2"
                        android:backgroundTint="@color/mega"
                        android:padding="3dp"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        tools:text="01" />

                <TextView
                        android:id="@+id/tv_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@drawable/borda_results_2"
                        android:backgroundTint="@color/mega"
                        android:padding="3dp"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        tools:text="01" />

                <TextView
                        android:id="@+id/tv_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@drawable/borda_results_2"
                        android:backgroundTint="@color/mega"
                        android:padding="3dp"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        tools:text="01" />

                <TextView
                        android:id="@+id/tv_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="@drawable/borda_results_2"
                        android:backgroundTint="@color/mega"
                        android:padding="3dp"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        tools:text="01" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/borda_results_2"
                android:orientation="vertical"
                android:padding="8dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sena"
                    android:textSize="20sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ganhadores" />

                <TextView
                        android:id="@+id/tv_ganhadores_sena"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="-" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_da_premicao" />

                <TextView
                        android:id="@+id/tv_valor_sena"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="10.000.000" />
            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quina"
                    android:textSize="20sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ganhadores" />

                <TextView
                        android:id="@+id/tv_ganhadores_quina"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="1" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_da_premicao" />

                <TextView
                        android:id="@+id/tv_valor_quina"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="10.000.000" />
            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quadra"
                    android:textSize="20sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ganhadores" />

                <TextView
                        android:id="@+id/tv_ganhadores_quadra"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="1" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/valor_da_premicao" />

                <TextView
                        android:id="@+id/tv_valor_quadra"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="10.000.000" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/borda_results_2"
                android:orientation="vertical"
                android:padding="8dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/proximo_sorteio"
                    android:textSize="20sp"/>

            <TextView
                    android:id="@+id/tv_valor_proximo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="10.000.000"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>